# Icecast-Server

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  News  README  README.md  TODO  acconfig.h  acinclude.m4  autogen.sh  config.h.vc6  configure.ac  configure.in  icecast.spec  report-db.xml
admin/: Makefile.am  dashboard.xsl  error-html.xsl  error-plaintext.xsl  fallbacks.xsl  listclients.xsl  listensocketlist.xsl  listmounts.xsl  logs.xsl  manageauth.xsl  managerelays.xsl  moveclients.xsl  response.xsl  showlog.xsl  stats.xsl  updatemetadata.xsl  vclt.xsl  version.xsl  viewxml.xsl  xspf.xsl
admin/fr_FR/: Makefile.am  listclients.xsl  listmounts.xsl  manageauth.xsl
admin/includes/: Makefile.am  authlist.xsl  confirm.xsl  footer.xsl  head.xsl  header.xsl  mountnav.xsl  page.xsl  player.xsl  playlist.xsl  web-page.xsl
admin/ui/: confirmdeleteuser.xsl  confirmkillclient.xsl  confirmkilldumpfile.xsl  confirmkillsource.xsl
ci/: README.md  create-changelog-and-set-versions.sh  fix-dsc.sh  icecast.dsc.templ
ci/osc/: common-config.sh  handle-osc-upload.sh  nightly-config.sh  prepare-osc-tools.sh  release-config.sh
ci/osc/icecast/: icecast.dsc  icecast.init  icecast.init.suse  icecast.logrotate  icecast.spec  icecast.xml
ci/osc/icecast/debian/: README.Debian  README.source  TODO.Debian  changelog  config  control  control.in  copyright  copyright_hints  gbp.conf  icecast2.1  icecast2.default  icecast2.doc-base  icecast2.init  icecast2.logrotate  icecast2.maintscript  icecast2.postinst  icecast2.postrm  rules  templates  watch
ci/osc/icecast/debian/po/: cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  templates.pot  vi.po
ci/osc/mingw32-icecast/: mingw32-icecast.spec
ci/osc/mingw32-icecast-installer/: mingw32-icecast-installer.spec
ci/osc/mingw64-icecast/: mingw64-icecast.spec
ci/osc/mingw64-icecast-installer/: mingw64-icecast-installer.spec
conf/: Makefile.am  icecast.xml  icecast.xml.in  icecast_auth.php  icecast_minimal.xml.in  icecast_shoutcast_compat.xml.in  icecast_urlauth.xml.in
debian/: Makefile.am  README.Debian  changelog  control  copyright  icecast2.1  icecast2.default  icecast2.init  icecast2.manpages  icecast2.postinst  icecast2.postrm  icecast2.preinst  rules  watch
doc/: Makefile  Makefile.am  Makefile.in  admin-interface.html  auth.html  basic-setup.html  changes.html  config-file.html  faq.html  glossary.html  icecast2.chm  icecast2.hhc  icecast2.hhp  icecast2_TOC.html  icecast2_admin.html  icecast2_auth.html  icecast2_basicsetup.html  icecast2_changes.html  icecast2_config_file.html  icecast2_faq.html  icecast2_glossary.html  icecast2_introduction.html  icecast2_listenerauth.html  icecast2_relay.html  icecast2_stats.html  icecast2_win32.html  icecast2_yp.html  index.html  index_win32.html  introduction.html  mkdocs.yml.in  relaying.html  server-stats.html  style.css  win32.html  win32_section1.html  win32_section2.html  win32_section3.html  yp.html
doc/admin_interface/: index.html
doc/assets/: Makefile.am
doc/assets/css/: Makefile.am  style.css
doc/assets/font/: Makefile.am
doc/assets/img/: Makefile.am
doc/auth/: index.html
doc/basic_setup/: index.html
doc/config_file/: index.html
doc/docs/: admin_interface.md  auth.md  basic_setup.md  config_file.md  index.md  introduction.md  relaying.md  server_stats.md  win32.md  yp.md
doc/img/: Makefile.am
doc/relaying/: index.html
doc/server_stats/: index.html
doc/win32/: index.html
doc/yp/: index.html
examples/: Makefile.am
m4/: ac_config_libconfig_in.m4  acx_pthread.m4  ogg.m4  ogg2.m4  shout.m4  speex.m4  theora.m4  vorbis.m4  xiph_compiler.m4  xiph_curl.m4  xiph_net.m4  xiph_path_python.m4  xiph_xml2.m4
src/: .cvsignore  Makefile.am  TODO  acl.c  acl.h  admin.c  admin.h  auth.c  auth.h  auth_anonymous.c  auth_anonymous.h  auth_cmd.c  auth_cmd.h  auth_enforce_auth.c  auth_htpasswd.c  auth_htpasswd.h  auth_ldap.c  auth_ldap.h  auth_static.c  auth_static.h  auth_url.c  auth_url.h  buffer.c  buffer.h  cfgfile.c  cfgfile.h  client.c  client.h  compat.h  config.c  config.h  configtest.c  connection.c  connection.h  connection_handle.c  connection_handle.h  cors.c  cors.h  curl.c  curl.h  (+125 more)
src/avl/: Makefile.am  avl.c  avl.h  test.c
src/httpp/: Makefile.am  httpp.c  httpp.h  test.c
src/log/: Makefile.am  log.c  log.h  test.c
src/net/: Makefile.am  resolver.c  resolver.h  sock.c  sock.h  test_resolver.c
src/tests/: Makefile.am  ctest_buffer.c  ctest_crypt.c  ctest_errors.c  ctest_refobject.c  ctest_resourcematch.c  ctest_string_renderer.c  ctest_suite.c
src/thread/: Makefile.am  thread.c  thread.h
src/timing/: Makefile.am  timing.c  timing.h
tests/: .gitignore  Makefile.am  admin-tests.sh  admin.test  ctest_lib.c  ctest_lib.h  ctest_refobject.c  ctest_resourcematch.c  ctest_suite.c  icecast.xml  on-connect.sh  startup.test
web/: 7.xsl  Makefile.am  admin.html  adminbar.html  auth.xsl  gopher-main-menu.xsl  index.html  navbar.html  server_uptime.xsl  server_version.xsl  status-json.xsl  status.xsl  status2.xsl  statusbar.html  style.css  uptime_xml.xsl  xml2json.xslt
web/assets/: Makefile.am
web/assets/css/: Makefile.am  style.css
web/assets/font/: Makefile.am
web/images/: Makefile.am
win32/: ConfigTab.cpp  ConfigTab.h  Icecast2win.clw  Icecast2win.cpp  Icecast2win.dsp  Icecast2win.dsw  Icecast2win.h  Icecast2win.rc  Icecast2winDlg.cpp  Icecast2winDlg.h  Makefile.am  ResizableDialog.cpp  ResizableDialog.h  StatsTab.cpp  StatsTab.h  Status.cpp  Status.h  StdAfx.cpp  StdAfx.h  TRAYNOT.h  TabCtrlSSL.cpp  TabCtrlSSL.h  TabPageSSL.cpp  TabPageSSL.h  Traynot.cpp  colors.h  dllbundler.sh  icecast.bat  icecast.dsp  icecast.nsis  icecast.xml  icecast2.iss  icecast2_console.dsp  icecast2_console.dsw  icecastService.cpp  icecastService.dsp  resource.h
win32/res/: Icecast2win.rc2  Makefile.am
