## Process this file with automake to produce Makefile.in

admindir = $(pkgdatadir)/admin
nobase_dist_admin_DATA = listclients.xsl listmounts.xsl moveclients.xsl response.xsl \
	stats.xsl manageauth.xsl updatemetadata.xsl xspf.xsl vclt.xsl includes/footer.xsl \
	includes/head.xsl includes/header.xsl includes/page.xsl includes/mountnav.xsl

