## Process this file with automake to produce Makefile.in

admindir = $(pkgdatadir)/admin

nobase_dist_admin_DATA = \
    listclients.xsl \
    listmounts.xsl \
    moveclients.xsl \
    response.xsl \
    stats.xsl \
    manageauth.xsl \
    updatemetadata.xsl \
    error-html.xsl \
    error-plaintext.xsl \
    xspf.xsl \
    vclt.xsl \
    dashboard.xsl \
    fallbacks.xsl \
    showlog.xsl \
    includes/footer.xsl \
    includes/head.xsl \
    includes/header.xsl \
    includes/page.xsl \
    includes/mountnav.xsl \
    includes/player.xsl \
    includes/playlist.xsl \
    includes/web-page.xsl \
    ui/confirmdeleteuser.xsl \
    ui/confirmkillclient.xsl \
    ui/confirmkillsource.xsl
