## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = assets img

docdir = $(datadir)/doc/icecast
doc_DATA = admin-interface.html auth.html changes.html faq.html \
	   introduction.html relaying.html win32.html basic-setup.html \
	   config-file.html glossary.html index.html server-stats.html yp.html

EXTRA_DIST = $(doc_DATA)
