## Process this file with automake to produce Makefile.in

docdir = $(datadir)/doc/$(PACKAGE)

nobase_doc_DATA = index.html \
	admin_interface/index.html \
	auth/index.html \
	basic_setup/index.html \
	config_file/index.html \
	relaying/index.html \
	server_stats/index.html \
	win32/index.html \
	yp/index.html \
	img/favicon.ico \
	img/Icecast_shema.svg \
	css/highlight.css \
	css/theme_extra.css \
	css/theme.css \
	fonts/fontawesome-webfont.eot \
	fonts/fontawesome-webfont.svg \
	fonts/fontawesome-webfont.ttf \
	fonts/fontawesome-webfont.woff \
	js/highlight.pack.js \
	js/jquery-2.1.1.min.js \
	js/modernizr-2.8.3.min.js \
	js/theme.js

EXTRA_DIST = $(nobase_doc_DATA)
