## Process this file with automake to produce Makefile.in

webdir = $(pkgdatadir)/web
web_DATA =      status.xsl \
                favicon.ico \
                icecast.png \
                style.css \
                auth.xsl \
                server_version.xsl \
                tunein.png \
                key.png \
                status-json.xsl \
                xml2json.xslt

EXTRA_DIST = $(web_DATA)
