## Process this file with automake to produce Makefile.in

webdir = $(pkgdatadir)/web

nobase_web_DATA = \
	status.xsl \
    favicon.ico \
    icecast.png \
    style.css \
    auth.xsl \
    server_version.xsl \
    tunein.png \
    key.png \
    status-json.xsl \
    xml2json.xslt \
    assets/css/style.css \
    assets/font/FiraMono-Bold.eot \
    assets/font/FiraMono-Regular.eot \
    assets/font/FiraSans-Bold.eot \
    assets/font/FiraSans-BoldItalic.woff \
    assets/font/FiraSans-Italic.eot \
    assets/font/FiraSans-Regular.eot \
    assets/font/FiraMono-Bold.woff \
    assets/font/FiraMono-Regular.woff \
    assets/font/FiraSans-BoldItalic.eot \
    assets/font/FiraSans-Bold.woff \
    assets/font/FiraSans-Italic.woff \
    assets/font/FiraSans-Regular.woff


EXTRA_DIST = $(nobase_web_DATA)
