## Process this file with automake to produce Makefile.in

webdir = $(pkgdatadir)/web

nobase_web_DATA = \
    status.xsl \
    auth.xsl \
    server_version.xsl \
    status-json.xsl \
    xml2json.xslt \
    favicon.ico \
    assets/css/style.css \
    assets/img/icecast.png


EXTRA_DIST = $(nobase_web_DATA)
